ads issue resolved

--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -18,7 +18,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:ignore="MissingClass">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -148,11 +149,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <com.google.android.ads.nativetemplates.TemplateView
-                    android:id="@+id/my_template"
-                    app:gnt_template_type="@layout/gnt_small_template_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+
 
 
         </LinearLayout>
